fixed alignment, added more styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,13 +28,14 @@ body {
 .board {
 	text-align: center;
 	width: 618px;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	height: unset;
 }
 
 .header {
 	font-size: 1.5em;
-
+	float: left;
+	margin-left: -199px;
 }
 
 .message {
